# zon-tracker

./: .gitignore  README.md
apps/api/: README.md  package-lock.json  package.json
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/auth/: auth.service.ts
apps/api/src/blogs/: blogs.controller.spec.ts  blogs.controller.ts  blogs.module.ts  blogs.service.spec.ts  blogs.service.ts
apps/api/src/tasks/: tasks.controller.spec.ts  tasks.controller.ts  tasks.module.ts  tasks.service.spec.ts  tasks.service.ts
apps/api/src/tracking/: tracking.controller.spec.ts  tracking.controller.ts  tracking.module.ts  tracking.service.spec.ts  tracking.service.ts
apps/api/src/users/: users.controller.ts  users.service.spec.ts  users.service.ts
apps/api/src/wss/: ws.tracking.gateway.ts  ws.tracking.module.ts
apps/desktop/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.vue  axios.ts  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 1.sql
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/config/: config.ts
apps/desktop/src/lib/: utils.ts
apps/desktop/src/models/: Task.ts  Tracking.ts  User.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/services/: DBService.ts  TaskService.ts  TrackingService.ts  UserService.ts
apps/desktop/src/stores/: db.ts  task.ts  tracking.ts  user.ts
apps/desktop/src/types/: index.ts
apps/web/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.vue  main.ts
(+35 files in other folders)
