[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
scrap = { version = "0.5" }
# tauri-plugin-sql = { path = "../../../packages/tauri-plugin-sql", features = ["sqlite"] }
# tauri-plugin-authenticator = { path = "../../../packages/tauri-plugin-authenticator" }

#[dependencies.tauri-plugin-sql]
#git = "https://github.com/tauri-apps/tauri-plugin-sql"
## tag = "v0.1.0" Not available yet
#features = ["sqlite"] # or "postgres", or "mysql"

#[dependencies.tauri-plugin-authenticator]
#git = "https://github.com/tauri-apps/tauri-plugin-authenticator"
## tag = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
